# k8s_Istio_grpc_stateful_example

./: .gitignore  .gitignore.swp  Makefile  README.md  autoscaler.yaml  client-deployment.yaml  deployments.yaml  istio-ilbgateway.yaml  istio-server-deployment.yaml  istio-virtualservice.yaml  server-deployment.yaml  services.yaml
client/: Cargo.toml  build.rs
client/src/: main.rs
db/: Cargo.toml
db/src/: main.rs
poc-client/: Cargo.toml  Dockerfile  README.md
poc-client/poc-protobuf/: poc.proto
poc-client/src/: db.rs  main.rs  poc.rs
poc-server/: Cargo.toml  Dockerfile
poc-server/poc-protobuf/: poc.proto
poc-server/src/: db.rs  main.rs
server/: Cargo.toml  build.rs
server/src/: main.rs  poc.rs
