[package]
name = "poc-server"
version = "0.1.0"
authors = ["donghun <donghun.lee@qraftec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "poc-server"
path = "src/main.rs"


[dependencies]
warp = "0.2.4"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "0.2.22", features = ["fs", "stream", "sync", "time", "macros"]}
tonic = {version = "0.3.0", features=["tls"]}
prost = "0.6"
async-stream = "0.3.0"
serde_json = "1.0"
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
azure_sdk_cosmos = "0.100.3"
serde = "1.0.116"

[build-dependencies]
tonic-build = "0.3"
